fix(user.css): hide playlist title field overflow

--- a/src/user.css
+++ b/src/user.css
@@ -290,6 +290,10 @@ html {
   display: contents;
 }
 
+.main-entityHeader-titleInner {
+  overflow: hidden;
+}
+
 h1,
 h2,
 h3,
